--- a/templetes/test.html
+++ b/templetes/test.html
@@ -9,7 +9,7 @@
             this is a paragraph
         </p>
         <p>
-            second paragraph
+            second paragraph is now ready
         </p>
     </body>
 </html>
