--- a/index.html
+++ b/index.html
@@ -8,16 +8,34 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">   -->
     <link rel = "stylesheet" href="css/styles.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand mr-auto" href="#">Ristorante con fusion</a>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class=" navbar-nav mr-auto">
+                    <li class="nav-item active"><a class="nav-link" href="#" >Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html" >About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" >Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" >Contact</a></li>
+    
+                </ul>
+            </div>
+            
+        </div>
+    </nav>
 
     <header class="jumbotron">
         <div class="container">
-            <div class="row row-content">
+            <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
@@ -69,7 +87,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -105,6 +123,7 @@
     </footer>
 
      <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
      <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
      <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
