--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="./img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a role="button" class="btn btn-warning" href="#resrve"><span>Reserve Table</span></a></button>
                 </div>
             </div>
         </div>
@@ -64,7 +67,8 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="./img/uthappizza.png"
                         alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span> </h2>
+                        <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span> <span
+                                class="badge badge-pill badge-secondary">$4.99</span> </h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
                             pizza, topped with Cerignola
                             olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
@@ -78,11 +82,17 @@
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
-                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
-                    $19.99 per person </p>
+            <div class="col col-sm order-sm-last col-md">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-left order-sm-last" src="./img/buffet.png" alt="buffer">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
+                            $19.99 per person </p>
+                    </div>
+                </div>
+                
             </div>
         </div>
 
@@ -104,6 +114,64 @@
                 </div>
 
             </div>
+        </div>
+        <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card" id="resrve">
+                    <h2 class="card-header bg-warning text-white">Reserve a Table</h2>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <div class="col-12 col-sm-2">
+                                    <label for="numgustes" class="col-form-label">Number of Guests</label>
+                                </div>
+                                <div class="col-12 col-sm-10 align-self-center">
+                                    <input type="radio" name="numgustes" id="one">
+                                    <label for="one" class="col-form-label">1</label>&nbsp;
+
+                                    <input type="radio" name="numgustes" id="two">
+                                    <label for="two" class="col-form-label">2</label>&nbsp;
+
+                                    <input type="radio" name="numgustes" id="three">
+                                    <label for="three" class="col-form-label">3</label>&nbsp;
+
+                                    <input type="radio" name="numgustes" id="four">
+                                    <label for="four" class="col-form-label">4</label>&nbsp;
+
+                                    <input type="radio" name="numgustes" id="five">
+                                    <label for="five" class="col-form-label">5</label>&nbsp;
+
+
+                                    <input type="radio" name="numgustes" id="six">
+                                    <label for="six" class="col-form-label">6</label>&nbsp;
+
+                                </div>
+
+                            </div>
+                            <div class="form-group row">
+                                    <label for="date" class="col-12 col-sm-3 col-form-lable">Date and Time</label>
+                                <div class="col-12 col-sm-4">
+                                    <input type="text" class="form-control">
+                                </div>
+                                <div class="col-12 col-sm-4">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                            
+                            <div class="form-group row justify-content-center">
+                                <div class="col-4 col-sm-4">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+
+
+
+
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
